Fix wrong font-style

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,7 +13,7 @@
 
   @font-face {
     font-family: 'shabnam';
-    font-style: bold;
+    font-style: normal;
     font-weight: 700;
     font-display: swap;
     src: url(/assets/fonts/Shabnam-Bold.woff) format('woff');
